ensure menus with many items can have a scrollbar

--- a/public/teacher/styles.css
+++ b/public/teacher/styles.css
@@ -20,6 +20,10 @@ html, body {
   margin: 0 !important;
 }
 
+.canscroll {
+    overflow-y: auto;
+}
+
 .underline {
   text-decoration: underline;
 }
